--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
     "dev": "next dev",
     "postinstall": "prisma generate",
     "lint": "next lint",
+    "lint:debug": "next lint --debug",
+    "lint:fix": "next lint --fix",
     "start": "next start"
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.5",
+    "@next/font": "^13.1.6",
     "@prisma/client": "^4.9.0",
+    "@radix-ui/react-navigation-menu": "^1.1.1",
     "@tanstack/react-query": "^4.20.0",
     "@trpc/client": "^10.9.0",
     "@trpc/next": "^10.9.0",
@@ -39,6 +43,7 @@
     "autoprefixer": "^10.4.7",
     "eslint": "^8.30.0",
     "eslint-config-next": "13.1.6",
+    "eslint-plugin-tailwindcss": "^3.8.3",
     "postcss": "^8.4.14",
     "prettier": "^2.8.1",
     "prettier-plugin-tailwindcss": "^0.2.1",
